上下文修改

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>hello</h1>
-	<form action="/start" method="post">
+	<form action="start" method="post">
 		<select name="m">
     		<option value="m">主机</option>
 			<option value="">从机</option>
