去除多余文件

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,6 +16,7 @@
 			<option value="await">等待</option>
 			<option value="stop">停止</option>
 			<option value="start">开始</option>
+			<option value="count">统计</option>
   		</select>
   		<input type="submit" value="确定" >
 	</form>
